Added sessions for log in / log out successfully, have not figured out how to hide logout and only show if a person is logged in

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,9 +27,13 @@
             <a href="/users/new">Create a New User</a>
           </li>
           <!-- add your link to the log in page here -->
-          <li></li>
+         
+          <li> 
+            <a href = "/sessions/new">Log in</a>
+          </li>
           <!-- add your form button to log out here -->
           <li>
+            <a href = "/sessions/logout">Log out</a>
           </li>
         </ul>
       </div>
