--- a/views/room/index.ejs
+++ b/views/room/index.ejs
@@ -25,6 +25,7 @@
           <li><a href="/room">fitting room three</a></li>
           <!-- add your form button to log out here -->
           <li>
+            <a href = "/sessions/logout">Log out</a>
           </li>
         </ul>
       </div>
